# Algorithmic-Showcase

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
algorithmic_showcase/: decision_tree.py  functions.py  losses.py  optimizers.py  regression_models.py  train_test_split.py
tests/: test_decision_tree.py  test_functions.py  test_losses.py  test_optimizers.py  test_regression_models.py  test_train_test_split.py
