[tool.poetry]
name = "algorithmic-showcase"
version = "0.1.0"
description = ""
authors = ["Thibaud Veron"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
